# ecgen

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  codecov.yml  ecgen.c  gen.sh  gp.c  gp.gp  gp.h  points.c  points.gp  points.h  sea.c  sea.gp  sea.h  utils.gp
.github/workflows/: release.yml  test.yml
docs/: output.md  points.md  readme.md
lib/: CMakeLists.txt  Makefile
lib/parson/: Makefile  version
lib/sha1/: Makefile  sha1.c  sha1.h
src/: Makefile  cli.c  cli.h  curve.c  curve.h  ecgen.c  econvert.c  equation.c  equation.h  field.c  field.h  generators.c  generators.h  gp.c  gp.h  input.c  input.h  output.c  output.h  point.c  point.h  poly.c  poly.h  random.c  random.h  seed.c  seed.h  types.h
src/cm/: anomalous.c  anomalous.h  cm.c  cm.h  cm_any.c  cm_any.h  cm_prime.c  cm_prime.h  custom.c  custom.h  p1363.c  p1363.h  supersingular.c  supersingular.h
src/exhaustive/: anomalous.c  anomalous.h  ansi.c  ansi.h  arg.c  arg.h  brainpool.c  brainpool.h  brainpool_rfc.c  brainpool_rfc.h  check.c  check.h  exhaustive.c  exhaustive.h  family.c  family.h  nums.c  nums.h  seed.c  seed.h  supersingular.c  supersingular.h
src/gp/: equation.gp  field.gp  gp.gp  invalid.gp  utils.gp
src/invalid/: invalid.c  invalid.h  invalid_thread.c  invalid_thread.h
src/io/: cli.c  cli.h  config.h  input.c  input.h  output.c  output.h
src/math/: arg.c  arg.h  curve.c  curve.h  equation.c  equation.h  field.c  field.h  gens.c  gens.h  koblitz.c  koblitz.h  order.c  order.h  point.c  point.h  poly.c  poly.h  random.c  random.h  subgroup.c  subgroup.h  subgroups.c  subgroups.h  twists.c  twists.h  types.c  types.h
src/misc/: compat.h  config.c  config.h  types.c  types.h
src/random/: generators.c  seed.h
src/util/: binascii.c  binascii.h  bits.c  bits.h  macro.h  memory.c  memory.h  random.c  random.h  str.c  str.h  timeout.c  timeout.h
test/: CMakeLists.txt  Makefile  common.sh  criterion.sh  ecgen.sh  econvert.sh  econvert_format.csv  econvert_format.json  f2m_10_a.csv  f2m_10_a.json  fp_10_a.csv
test/data/: f2m_10_a.csv  f2m_10_a.csv.in  fp_10_a.csv  fp_10_a.csv.in  fp_10_a.json  prime.in  secp112r1.csv.in  secp112r1.order.txt  secp128r1.csv.in  secp128r1.order.txt  secp160k1.csv.in  secp160k1.order.txt  sect163k1.csv.in  sect163k1.order.txt  sect163r1.csv.in  sect163r1.order.txt
test/lib/: assert.sh
test/src/: Makefile
test/src/cm/: test_cm.c  test_custom.c  test_p1363.c
test/src/exhaustive/: test_ansi.c  test_brainpool.c  test_brainpool_rfc.c  test_supersingular.c
test/src/io/: test_cli.c  test_input.c
test/src/math/: test_koblitz.c  test_subgroup.c  test_subgroups.c  test_twists.c
test/src/test/: default.c  default.h  input.c  input.h  io.c  io.h  memory.c  memory.h  output.c  output.h  utils.c  utils.h
test/src/util/: test_binascii.c  test_bits.c  test_random.c  test_timeout.c
util/: csv.sh
